--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/LOKESWARAN-ARULJOTHI/Apple-Store#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.1",
+    "nodemon": "^2.0.12"
   }
 }
