--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "homepage": "https://github.com/LOKESWARAN-ARULJOTHI/Apple-Store#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^6.0.1"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
